--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <div class="container">
     <header class="header clearfix">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Dstagram</a>
+            <a class="navbar-brand" href="/">FlowerStar</a>
             <ul class="nav">
                 <li class="nav-item"><a href="/" class="active nav-link ">Home</a></li>
                 {% if user.is_authenticated %}
@@ -33,7 +33,7 @@
     {% endblock %}
 
     <footer class="footer">
-        <p>&copy; 2020 Flowerstar. Powered By Bigview</p>
+        <p>&copy; 2021 Flowerstar. Powered By BigView</p>
     </footer>
 </div>
 
